<resources>
    <string name="app_name">AmplifierAdmin</string>
    <string name="LogintoAdmin">Login to Admin</string>
    <string name="UserName">User Name</string>
    <string name="enter_username_txt">Enter Your User Name</string>
    <string name="password">Password</string>
    <string name="password_enter">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="AdminSupportes">Admin Supportes</string>
    <string name="AdsList">ADS LIST</string>
    <string name="subadmin">Sub Admin 1</string>
    <string name="Reject">Reject</string>
    <string name="Accept">Accept</string>
    <string name="vamsi">Vamsi</string>
    <string name="pending">Pending</string>
    <string name="fullname_txt">LIC HousingFinanceFinancialSerivicesLtd</string>
    <string name="DivvelaRamesh">DivvelaRamesh</string>
    <string name="dummytext">For More details plz call</string>
    <string name="WatchNow">Watch Now</string>
    <string name="AmplifierAdmin">Amplifier Admin</string>
    <string name="subadmin1">Sub Admin1</string>
    <string name="PEDINGADSLIST">ADS Peding List</string>
    <string name="loading">Loading</string>
    <string name="Number">20222023</string>
    <string name="ACCEPTADSLIST">ADS Accept List</string>
    <string name="REJECTADSLIST">ADS Reject List</string>
    <string name="AcceptdList">Accepted List</string>
    <string name="no_txt">No</string>
    <string name="yes_txt">Yes</string>
    <string name="RejectedList">Rejected List</string>
    <string name="BusinessADSList">ADD Business List</string>
    <string name="CliamBusiness">Claim Business</string>
    <string name="BusinessesList">Businesses List</string>
    <string name="Registration">Registration</string>
    <string name="companyname_txt">Business Name</string>
    <string name="enter_your_company_name">Business Name(*)</string>
    <string name="type_txt">Listing Type</string>
    <string name="contactname_txt">Contact Person Name</string>
    <string name="contactname_et">Contact Person Name(*)</string>
    <string name="email_et">Email(*)</string>
    <string name="email">Email</string>
    <string name="phnumebr_txt">Phone Number(*)</string>
    <string name="confirmpassword_txt">Password(*)</string>
    <string name="passwordet">Password(*)</string>
    <string name="username_text">Username(*)</string>
    <string name="username_txt">Username</string>
    <string name="TimeZone">Time Zone</string>
    <string name="agree_txt">Agree</string>
    <string name="terms_txt">Terms Conditions</string>
    <string name="register_txt">Register</string>
    <string name="Advertaisements">Advertaisements</string>
    <string name="pastAds">past Ads</string>
    <string name="create_on_ad">Create an Ad</string>
    <string name="choose_category">Choose Category</string>
    <string name="title_txt">Title</string>
    <string name="posttitle_et">Post title</string>
    <string name="startdate_txt">Start Date</string>
    <string name="provideactivedate_txt">Provide when the ad to be effective from</string>
    <string name="enddate_txt">End Date</string>
    <string name="title_logout">Logout</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="location_txt">Location</string>
    <string name="locationexpire_txt">This is when the ad expires.Plz keep this date same as offer expiry date.Max allowed 7 days</string>
    <string name="currentlocation_txt">Current Location</string>
    <string name="otherlocation_txt">Other Location</string>
    <string name="locaplacce_txt">location Place</string>
    <string name="typetxt">Type</string>
    <string name="actiondropdown_txt">This is Call to Action button that users  can be redirected</string>
    <string name="websitelink_txt">Website Link</string>
    <string name="weblink_txt">Provide web url as given in the example: \n https:domain.com</string>
    <string name="descrption_txt">Description</string>
    <string name="descrption_ettxt">Enter the short descrption about your post</string>
    <string name="submet_txt">Send for Approval</string>
    <string name="save">Save</string>
    <string name="Approval">Approval</string>
    <string name="refer_business">Refer a Business List</string>
    <string name="Category">Add Category</string>
    <string name="Categories">Categories</string>
    <string name="add_category">Category Name*</string>
    <string name="add_service">Add Service(*)</string>
    <string name="Botique">Botique</string>
    <string name="Business_category">BusinessCategory</string>
    <string name="type">Tags*</string>
    <string name="Business_list">All Business List</string>
    <string name="all_stores">All Stores</string>
    <string name="cliamusers">Cliam Users</string>
    <string name="user_details">Business Details</string>
    <string name="Business_name">Business Name</string>
    <string name="phone">Phone</string>
    <string name="companyname">Business Name*</string>
    <string name="business">Business Category*</string>
    <string name="type_txext">Listing Type*</string>
    <string name="email_tv">Email*</string>
    <string name="username">Business Username*</string>
    <string name="business_location">Business Location</string>
    <string name="building_number"><![CDATA[Building Number & street Name*]]></string>
    <string name="mall_shop">Mall / Shopping Complex / Airports / Office Building etc</string>
    <string name="unit_floor">Unit / Shop, floor etc</string>
    <string name="area_name">AreaName,Mandal,District</string>
    <string name="city">City / Town / Village*</string>
    <string name="pincode">Pincode*</string>
    <string name="state">State*</string>
    <string name="approve_text">Approve</string>
    <string name="Country">Country</string>
    <string name="approved_list">Approved List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refer_busines">Refer a Business</string>
    <string name="Block">Block</string>
    <string name="confirm">Confirm</string>
    <string name="user_Cliam_Business">User Cliam Business</string>
    <string name="business_info">Business Info</string>
    <string name="Business_name_refer">Business Name*</string>
    <string name="Business_categorys">Business Category*</string>
    <string name="listing_type">Listing Type*</string>
    <string name="phone_number">Phone Number</string>
    <string name="located">Loicated</string>
    <string name="jobs">Jobs</string>
    <string name="jobs_list">Jobs List</string>
    <string name="rewards_assign">Rewards Assign</string>
    <string name="edit">Edit</string>
    <string name="rewards">Rewards</string>
    <string name="register">Register :</string>
    <string name="home_screen">Home Screen :</string>
    <string name="contact">Contact :</string>
    <string name="update_rewards">Updaterewards Points</string>
    <string name="register_points">Register Points(*)</string>
    <string name="home_points">Homescreen Points(*)</string>
    <string name="contact_point">ContactPoints(*)</string>
    <string name="pleselogin">Please Login</string>
    <string name="recommanded_services">Recommanded Services</string>
    <string name="sub_types">Add Types*</string>
    <string name="Types_list">Types List</string>
    <string name="Add_types">Sub Types*</string>
    <string name="ok">Ok</string>
    <string name="top_business_list">Top Business List</string>
    <string name="ads_top_business">Ads Top Business</string>
    <string name="start_date">Start Date*</string>
    <string name="amount">Amount*</string>
    <string name="rank">Rank*</string>
    <string name="priority">Priority</string>
    <string name="advertaise_type">Advertaise Type*</string>
</resources>