<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userpic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:src="@drawable/banner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="45dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:text="@string/fullname_txt"
                    android:fontFamily="@font/jost_regular_400"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                  />

                <TextView
                    android:id="@+id/createddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5sp"
                    android:gravity="start"
                    android:text="@string/DivvelaRamesh"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:fontFamily="@font/jost_regular_400"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10sp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/fullname_txt"
        android:textColor="@color/black"
        android:fontFamily="@font/jost_regular_400"
        android:textSize="16dp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="25sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/dummytext"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:fontFamily="@font/jost_regular_400"/>
    <TextView
        android:id="@+id/tv_watchnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/WatchNow"
        android:textColor="@color/appcolor"
        android:textSize="14dp"
        android:fontFamily="@font/jost_regular_400"/>
    <LinearLayout
        android:id="@+id/accept_reject_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/rejected_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="#DF1B1B"
            android:text="@string/Reject"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/accepted_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="#1BD123"
            android:text="@string/Accept"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>