<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userpic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:src="@drawable/banner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="45dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/jost_regular_400"
                    android:gravity="start"
                    android:text="@string/fullname_txt"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/createddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5sp"
                    android:fontFamily="@font/jost_regular_400"
                    android:gravity="start"
                    android:text="@string/DivvelaRamesh"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10sp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/jost_regular_400"
        android:text="@string/fullname_txt"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/jost_regular_400"
        android:lineSpacingExtra="3sp"
        android:text="Oct 26,2022 . Oct 30,2022"
        android:textColor="@color/black"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/jost_regular_400"
        android:lineSpacingExtra="3sp"
        android:text="@string/dummytext"
        android:textColor="@color/black"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/tv_watchnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/jost_regular_400"
        android:lineSpacingExtra="3sp"
        android:text="@string/WatchNow"
        android:textColor="@color/appcolor"
        android:textSize="14dp" />

    <Button
        android:id="@+id/accepted_btn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:backgroundTint="#2E8A06"
        android:paddingHorizontal="40dp"
        android:text="@string/Accept"
        android:textAllCaps="true"
        android:textColor="@color/white" />
</LinearLayout>